# priest

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVLOG.md  README.md  pyproject.toml
priest/: __init__.py  compactor.py  engine.py  errors.py  tool_loop.py
priest/memory/: __init__.py
priest/profile/: context_builder.py  default_profile.py  loader.py  model.py
priest/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_compat_provider.py
priest/schema/: request.py  response.py
priest/session/: memory_store.py  model.py  sqlite_store.py  store.py
scripts/: try_run.py
spec/: CHANGELOG.md  README.md
spec/behavior/: context-assembly.md  error-codes.md  profile-loading.md  providers.md  session-lifecycle.md  streaming.md  tool-calling.md
spec/schemas/: config.schema.json  profile.schema.json  request.schema.json  response.schema.json  session.schema.json
tests/: mock_adapter.py  test_cached_usage.py  test_compaction.py  test_core_features.py  test_engine.py  test_profile_loader.py  test_streaming.py  test_structured_output.py  test_tool_calling.py
tests/fixtures/profiles/default/: CUSTOM.md  PROFILE.md  RULES.md
tests/fixtures/profiles/default/memories/: 01_context.md
tests/fixtures/profiles/minimal/: PROFILE.md
