[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priest"
version = "0.1.0"
description = "Pure core library for AI orchestration"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["priest"]
