[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priest"
version = "0.2.0"
description = "Pure core library for AI orchestration — transport-agnostic, host-agnostic, async-first"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "openai>=1.0",
    "anyio[trio]>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["priest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
