[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priest-core"
version = "2.2.0"
description = "Pure core library for AI orchestration — transport-agnostic, host-agnostic, async-first"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "openai>=1.0",
    "anyio[trio]>=4.0",
]

[project.urls]
Homepage = "https://github.com/tjcccc/priest"
Repository = "https://github.com/tjcccc/priest"
Issues = "https://github.com/tjcccc/priest/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["priest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live provider (e.g. Ollama running locally)",
]
